syntax = "proto3";

import "bottle/inventory/v1/component.proto";
import "bottle/inventory/v1/location.proto";
import "bottle/inventory/v1/sku.proto";

package bottle.inventory.v1;

message ListComponentAvailabilityRequest {
  string request_id = 1;
  repeated bottle.inventory.v1.Component components = 2;
}

message ListComponentAvailabilityResponse {
  string request_id = 1;
  bottle.inventory.v1.Component component = 2;
  int32 total_available_quantity = 3;

  message PickingOption {
    bottle.inventory.v1.Sku sku = 1;
    bottle.inventory.v1.Location recommended_location = 2;
    int32 required_quantity_per_kit = 3;
    int32 available_quantity = 4;
  }

  repeated PickingOption picking_options = 4;
}

message ListSkuAvailabilityRequest {
  string request_id = 1;
  bottle.inventory.v1.Sku sku = 2;
}

message ListSkuAvailabilityResponse {
  string request_id = 1;
  bottle.inventory.v1.Sku sku = 2;
  bottle.inventory.v1.Location location = 3;
  int32 available_quantity = 4;
}

message ListLocationsRequest {
  string request_id = 1;
  repeated bottle.inventory.v1.Location locations = 2;
}

message ListLocationsResponse {
  string request_id = 1;
  bottle.inventory.v1.Location location = 2;
}
